fix: add spacing to the topic content

--- a/components/TopicDisplay/Content.module.scss
+++ b/components/TopicDisplay/Content.module.scss
@@ -110,6 +110,12 @@
     width: var(--size-6);
   }
 
+  ol,
+  ul {
+    margin-left: var(--space-6);
+    margin-top: var(--space-4);
+  }
+
   p + p {
     margin-top: var(--space-4);
   }
